Fix modal images and overflows

--- a/ui/components/semantic-ui/less/components/definitions/modules/carousel.less
+++ b/ui/components/semantic-ui/less/components/definitions/modules/carousel.less
@@ -24,15 +24,6 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
-.zoomable-image {
-  &:hover {
-    cursor: -moz-zoom-in; 
-    cursor: -webkit-zoom-in; 
-    cursor: zoom-in;
-    
-  }
-}
-
 .ui.carousel {
   .slick-slider {
     .slick-arrow:before {
@@ -60,8 +51,6 @@
     }
 
     .slick-image {
-      .zoomable-image();
-
       &:hover {
         box-shadow: 0 0 10px @primaryRed;
       }
